--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -13,7 +13,17 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
-        
+        <header class="header">Text here...
+            <div class="logobox">
+                <img src="img/logo-white.png" class ="logo" alt="logo" />
+            </div>
+
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">outdoors</span>
+                    <span class="heading-primary-sub">is where life happens</span>
+                </h1>
+            </div>
+        </header>
     </body>
 </html>
